--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "mgtcommerce/module-mgtdevelopertoolbar": "^1.0",
         "ethanyehuda/magento2-cronjobmanager": "^1.6",
         "mageplaza/magento-2-vietnamese-language-pack": "dev-master",
-        "sashas/bug-from-email": "^2.0"
+        "sashas/bug-from-email": "^2.0",
+        "magefan/module-conflict-detector": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
@@ -79,6 +80,10 @@
         {
             "type": "composer",
             "url": "https://repo.magento.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:magento-hackathon/magento2-plugin-visualization.git"
         }
     ],
     "extra": {
