--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "ethanyehuda/magento2-cronjobmanager": "^1.6",
         "mageplaza/magento-2-vietnamese-language-pack": "dev-master",
         "sashas/bug-from-email": "^2.0",
-        "magefan/module-conflict-detector": "^2.0"
+        "magefan/module-conflict-detector": "^2.0",
+        "magepal/magento2-gmailsmtpapp": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
